2016-03-12  Carl Hetherington  <cth@carlh.net>

	* Add 2.35:1 ratio.

	* Fix assertion failure on opening content properties (#816).

2016-03-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.2 released.

2016-03-10  c.hetherington  <cth@carlh.net>

	* Updated it_IT translation from Fabio "Zak" Belli.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Store time zone with cinemas and use them to
	mark KDM start and end times correctly (#788).

	* Bump ffmpeg to git master, somewhere post 3.0.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Fix occasional crash when opening the custom
	colour conversion editor.

	* Version 2.7.0 released.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.39 released.

2016-03-08  Carl Hetherington  <cth@carlh.net>

	* Updated ua_UK and ru_RU translations from Igor Voytovich.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.38 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Don't try to auto-analyse audio of non-audio content.

	* Version 2.6.37 released.

2016-03-07  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.36 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.6.35 released.

2016-03-07  Carl Hetherington  <cth@carlh.net>

	* Updated ua_UK and ru_RU translations from Igor Voytovich.

	* Version 2.6.34 released.

2016-03-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.33 released.

2016-03-06  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-03-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.32 released.

2016-03-05  Carl Hetherington  <cth@carlh.net>

	* Try to fix slowdowns on Windows XP (#771).

2016-03-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.31 released.

2016-03-02  c.hetherington  <cth@carlh.net>
