@@ -1,3 +1,8 @@
+2016-03-13  Carl Hetherington  <cth@carlh.net>
+
+	* Fix crash when using non-English decimal separators
+	in the audio gain calculator dialogue (#824).
+
 2016-03-12  Carl Hetherington  <cth@carlh.net>
 
 	* Add 2.35:1 ratio.
